Add padding to header(elements too), main, footer
Added appropriate(?) spacing to header, main and footer sections, and
to elements of the header

--- a/main.css
+++ b/main.css
@@ -1,5 +1,12 @@
 body {
     font-family: 'Roboto', sans-serif;
+    margin: 0px;
+}
+
+header,
+main,
+footer {
+    padding: 0px 250px;
 }
 
 header {
@@ -13,7 +20,7 @@ header {
 }
 
 .top {
-    align-items: center;
+    align-items: baseline;
     gap: 25px;
 }
 
@@ -22,15 +29,19 @@ header {
     font-size:  24px;
     color: #f9faf8;
     font-weight: 800;
+    margin-bottom: 0px;
 }
 
 .top a,
 .bottom p {
     font-size:  18px;
     color: #e5e7eb;
+    text-decoration: none;
+    margin-top: 0px;
 }
 
 .bottom {
+    padding: 120px 0px;
     gap: 50px;
 }
 
@@ -43,6 +54,7 @@ header {
     font-size:  48px;
     font-weight: 800;
     color: #f9faf8;
+    margin: 0px;
 }
 
 .right {
