--- a/main.css
+++ b/main.css
@@ -4,9 +4,14 @@ body {
 }
 
 header,
-main,
+.to-action
 footer {
     padding: 0px 250px;
+}
+
+.info,
+.quote {
+    padding: 0px 325px;    
 }
 
 header {
@@ -106,4 +111,29 @@ button {
     width: 150px;
     border: 3px  solid #3382f6;
     border-radius: 10px ;
+}
+
+.quote {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    background-color: #e5e7eb;
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+
+.quote p {
+    font-size: 24px;
+    font-weight: 600;
+    margin: 0px;
+}
+
+.quote .text {
+    font: 300 italic 36px 'Roboto', sans-serif;
+    color: #1f2937;
+}
+
+.quote .author {
+    align-self: flex-end;
+    margin-right: 50px;
 }
